# haskell-language-hcl

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  Vagrantfile  benchmark.html  circle.yml  default.conf  language-hcl.cabal  package.yaml  small.conf  stack.yaml
bench/: HCLBenchmark.hs
src/: ConfFmt.hs
src/Data/: Conf.hs  HCL.hs
src/Data/Conf/: Internal.hs  PrettyPrint.hs  Types.hs
src/Data/HCL/: Class.hs  LexChar.hs  PrettyPrint.hs  Terraform.hs  Types.hs
test-fixtures/: bools.hcl  references-other.hcl
test/Data/: ConfSpec.hs  HCLSpec.hs
test/Data/HCL/: PrettyPrintSpec.hs  TerraformSpec.hs  TestHelper.hs
