name:                language-hcl
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/beijaflor-io/language-hcl
license:             AllRightsReserved
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.HCL
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , directory >= 1.2.2.0
                     , filepath >= 1.4.0.0
                     , megaparsec >= 5
                     , scientific >= 0.3.4.6
                     , text >= 1.2.2.1
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
