name:                language-hcl
version:             0.1.0.0
synopsis:            language-hcl is an HCL (Hashicorp Configuration Language)
                   . and .conf parser for the Haskell programming language.
-- description:
homepage:            https://github.com/beijaflor-io/language-hcl
license:             AllRightsReserved
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           Copyright (c) 2016 Beijaflor Soluções Inteligentes ME
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.HCL
                     , Data.HCL.Types
                     , Data.Conf
                     , Data.HCL.PrettyPrint
  build-depends:       base >=4.8 && <4.9
                     , directory >= 1.2.2.0
                     , filepath >= 1.4.0.0
                     , megaparsec >= 5
                     , pretty
                     , scientific >= 0.3.4.6
                     , semigroups >= 0.18.1
                     , text >= 1.2.2.1
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable conffmt
  main-is: ConfFmt.hs
  hs-source-dirs: src
  build-depends: base
               , text
               , megaparsec
               , language-hcl
               , pretty

test-suite hspec
  main-is: Spec.hs
  other-modules: Data.HCLSpec
               , SanitySpec
               , Data.HCL.PrettyPrintSpec
  type: exitcode-stdio-1.0
  build-depends: QuickCheck
               , base
               , directory
               , filepath
               , hspec
               , language-hcl
               , megaparsec
               , hspec-megaparsec
               , pretty
               , semigroups >= 0.18.1
               , text
               , transformers >= 0.4.2.0
  hs-source-dirs: test
  default-language: Haskell2010
